feature: added uncategorized items in skillmatrix